--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.6
+  carousel_slider: ^5.0.0
+  swipe_cards: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
