--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   get: ^4.6.6
   carousel_slider: ^5.0.0
   swipe_cards: ^2.0.0+1
+  url_launcher: ^6.3.0  
+
+  firebase_auth: ^4.17.8
+  firebase_core: ^2.27.0
 
 dev_dependencies:
   flutter_test:
